fixed, bullets appearing on smaller screens next to arrow, updated theme version to clear browser cache.

--- a/wp-content/themes/PCSD-2024-Theme/assets/css/main.css
+++ b/wp-content/themes/PCSD-2024-Theme/assets/css/main.css
@@ -1043,13 +1043,16 @@ form .block {
 /*================================================================================================================
 Table of Contents
 ================================================================================================================*/
+.pageTableOfContents {
+    list-style-image: none !important;
+    list-style-type: none;
+}
+
 @media (min-width: 1400px) {
     .pageTableOfContents {
         float: right;
         border: 1px solid #ccc;
         padding: 1em;
-        list-style-image: none !important;
-        list-style-type: none;
     }
 }
 
